--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip":"Mayavi69.aternos.me","name":"Mayavi duniya","port":"21941"}
+{"ip":"Mayaviword.aternos.me","name":"Mayaviduniya","port":"36675"}
